--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,10 @@
         <module>nio-project</module>
     </modules>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
+
 
 </project>
