--- a/base-project/pom.xml
+++ b/base-project/pom.xml
@@ -9,17 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>reflection-project</artifactId>
-
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.60</version>
-        </dependency>
-
-    </dependencies>
+    <artifactId>base-project</artifactId>
 
 
 </project>
