--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,28 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>nio-project</module>
+        <module>reflection-project</module>
+        <module>base-project</module>
     </modules>
+
+    <properties>
+        <lombok.version>1.18.8</lombok.version>
+    </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
