--- a/base-project/pom.xml
+++ b/base-project/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>base-project</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>
+            <!--            <scope>provided</scope>-->
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
